--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -66,4 +66,14 @@ import { work } from '@cv';
         color: #777;
         font-size: 0.875rem;
     }
+
+	@media (prefers-color-scheme: dark) {
+		p {
+			color: #var(--text-color);
+		}
+
+		time.date {
+			color: var(--date-color);
+		}
+	}
 </style>
