--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,5 +33,9 @@ const { name, label } = basics;
 		padding: 4rem;
 		margin: auto;
 		width: 100%;
+
+		@media (width < 680px) {
+			padding: 4rem 25px;
+		}
 	}
 </style>
