--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -13,7 +13,7 @@ import { projects } from '@cv';
 						<header>
 							<h3>
 								<a
-									href='{url}'
+									href={url}
 									target='_blank'
 									rel='noopener noreferrer'
 									title={`Ver el proyecyo de ${name}`}
@@ -23,6 +23,10 @@ import { projects } from '@cv';
 								{isActive && <span>&bull;</span>}
 							</h3>
 							<p>{description}</p>
+
+							<div class='print'>
+								<span>{url}</span>
+							</div>
 						</header>
 						<footer>
 							{highlights.map((highlight) => {
@@ -39,7 +43,7 @@ import { projects } from '@cv';
 <style>
 	ul {
 		display: grid;
-		grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 		gap: 1rem;
 	}
 
@@ -63,7 +67,7 @@ import { projects } from '@cv';
 		}
 
 		h3 > a {
-			madrbottom: 8px;
+			margin-bottom: 8px;
 			color: #333;
 		}
 
@@ -82,6 +86,10 @@ import { projects } from '@cv';
 		flex-wrap: wrap;
 		gap: 4px;
 		font-size: 0.7rem;
+
+		&:not(:has(span)) {
+			display: none;
+		}
 	}
 
 	article footer span {
@@ -95,6 +103,58 @@ import { projects } from '@cv';
 
 		&:hover {
 			background-color: #888;
+		}
+	}
+
+	.print {
+		display: none;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		p {
+			color: var(--text-color);
+		}
+
+		h2 {
+			color: var(--h2-color);
+		}
+
+		article {
+			border-color: var(--border-color);
+		}
+
+		article header {
+			h3 > a {
+				color: var(--text-color);
+
+				&:hover {
+					color: var(--link-color);
+				}
+			}
+		}
+
+		span {
+			color: var(--span-color);
+		}
+
+		footer a {
+			color: var(--link-color);
+			border-color: var(--border-color);
+		}
+	}
+
+	@media print {
+		.print {
+			display: block;
+			text-wrap: wrap;
+		}
+
+		ul {
+			width: 700px;
+		}
+
+		ul > li {
+			width: 340px;
 		}
 	}
 </style>
