SEO and accessibility changes-3

--- a/src/components/KeyboardManager.astro
+++ b/src/components/KeyboardManager.astro
@@ -45,7 +45,7 @@ const profilesInfo = profiles.map(({ network, url }) => {
 
 <footer class='no-print'>
 	<div>Pulsa <kbd>Ctrl</kbd> + <kbd>K</kbd> para abrir la paleta de comandos.</div>
-	<button class='paletteToggle'>
+	<button class='paletteToggle' aria-label='Abrir paleta de comandos'>
 		<CommandButton />
 	</button>
 </footer>
